--- a/package.json
+++ b/package.json
@@ -6,13 +6,14 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite build && vite preview"
   },
   "devDependencies": {
     "vite": "^4.4.5"
   },
   "dependencies": {
     "bootstrap-icons": "^1.10.5",
+    "glob": "^10.3.3",
     "sass": "^1.65.1"
   }
 }
