--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "bootstrap-icons": "^1.10.5",
     "glob": "^10.3.3",
+    "modern-normalize": "^2.0.0",
     "sass": "^1.65.1"
   }
 }
