--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "bootstrap-icons": "^1.10.5",
+    "bulma": "^0.9.4",
     "glob": "^10.3.3",
     "modern-normalize": "^2.0.0",
     "sass": "^1.65.1"
