--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "build": "vite build --base=/calendar-events-generator/",
     "preview": "vite build && vite preview"
   },
   "devDependencies": {
@@ -15,6 +15,7 @@
     "bootstrap-icons": "^1.10.5",
     "date-fns": "^2.30.0",
     "flatpickr": "^4.6.13",
+    "gh-pages": "^6.0.0",
     "glob": "^10.3.3",
     "ics": "^3.2.0",
     "modern-normalize": "^2.0.0",
